# EV4-Constructability-Engineer-Repo

./: AGENTS.md  CHANGELOG.md  README.md  STATUS.md  agents.me  package-lock.json  package.json  pyproject.toml
.ce46-repair/: part0  part1  part2
.github/: ce46-full-diagnostic.py
contracts/: ARCHITECT_STAGE_TO_CE_INTAKE_MAPPING_V1.md  ARCHITECT_STAGE_TO_CE_INTAKE_MAPPING_V1_1.md  ARCHITECT_TO_CE_INPUT_MAPPING_V1.md  CE_ARCHITECT_STAGE_INTAKE_V1.md  CE_ARCHITECT_STAGE_INTAKE_V1_1.md  CE_DETERMINISTIC_CONSTRUCTABILITY_EVALUATION_V1_1.md  CE_INTERMEDIATE_VALIDATION_CARRIERS_V1.md  CE_PHASE_AWARE_BUILDER_LIFECYCLE_V1_1.md  CE_VERIFIED_CONSTRUCTABILITY_PROOF_RUNTIME_V1_1.md  VERIFIED_CONSTRUCTABILITY_PROOF_RUNTIME_V1.md
docs/: AI_GOVERNANCE.md  ARCHITECTURE.md  BEHAVIORAL_RULE_COVERAGE.md  BEHAVIORAL_RULE_COVERAGE_PROMPT_2_ADDENDUM.md  CE_BUILDER_BRANCH_READY.md  CE_BUILDER_FINAL_REVIEW_MARKER.md  CE_BUILDER_HARDENING_INDEX.md  CE_BUILDER_HARDENING_READY.md  CE_BUILDER_OPEN_PR_ACTUAL.md  CE_BUILDER_OPEN_PR_NOTE.md  CE_BUILDER_OPEN_PULL_REQUEST.md  CE_BUILDER_PRODUCER_BRANCH_NOTE.md  CE_BUILDER_PRODUCER_CONTRACT_BOUNDARY.md  CE_BUILDER_PRODUCER_CONTRACT_COMPLETE.md  CE_BUILDER_PRODUCER_CONTRACT_DECISION.md  CE_BUILDER_PRODUCER_CONTRACT_FINAL_NOTE.md  CE_BUILDER_PRODUCER_CONTRACT_KEEP.md  CE_BUILDER_PRODUCER_CONTRACT_NOTE.md  CE_BUILDER_PRODUCER_CONTRACT_PATCH_SCOPE.md  CE_BUILDER_PRODUCER_CONTRACT_PR.md  CE_BUILDER_PRODUCER_CONTRACT_READY.md  CE_BUILDER_PRODUCER_CONTRACT_REVIEW_CHECKLIST.md  CE_BUILDER_PRODUCER_CONTRACT_SCOPE.md  CE_BUILDER_PRODUCER_CONTRACT_SUMMARY.md  (+48 more)
(+253 files in other folders)
