[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ev4-constructability-engineer"
version = "0.1.0"
description = "EV4 constructability validator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.22.0",
  "pyyaml>=6.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0"
]

[project.scripts]
ev4-constructability = "validator.engine:main"
ev4-ce-project-gate-export = "validator.verified_project_gate_exporter:main"

[tool.setuptools]
packages = ["validator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
